// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a dropdown with options 1`] = `
<div>
  <div
    class="usa-form-group"
    role="contentinfo"
  >
    <label
      class="usa-label text-bold"
      for="aws-service"
    >
      Select an AWS service
    </label>
    <div
      class="usa-hint"
      id="aws-service-description"
    />
    <select
      aria-describedby="aws-service-description"
      class="usa-select"
      id="aws-service"
      name="aws-service"
    >
      <option
        value="s3"
      >
        Amazon S3
      </option>
      <option
        value="lambda"
      >
        AWS Lambda
      </option>
    </select>
  </div>
</div>
`;

exports[`renders a select with a default value 1`] = `
<div>
  <div
    class="usa-form-group"
    role="contentinfo"
  >
    <label
      class="usa-label text-bold"
      for="aws-service"
    >
      Select an AWS service
    </label>
    <div
      class="usa-hint"
      id="aws-service-description"
    />
    <select
      aria-describedby="aws-service-description"
      class="usa-select"
      id="aws-service"
      name="aws-service"
    >
      <option
        value="s3"
      >
        Amazon S3
      </option>
      <option
        selected=""
        value="lambda"
      >
        AWS Lambda
      </option>
    </select>
  </div>
</div>
`;

exports[`renders a select with error 1`] = `
<div>
  <div
    class="usa-form-group usa-form-group--error"
    role="contentinfo"
  >
    <label
      class="usa-label text-bold"
      for="aws-service"
    >
      Select an AWS service
    </label>
    <div
      class="usa-hint"
      id="aws-service-description"
    />
    <span
      class="usa-error-message"
      id="input-error-message"
      role="alert"
    >
      Something bad happened
    </span>
    <select
      aria-describedby="aws-service-description"
      class="usa-select"
      id="aws-service"
      name="aws-service"
    />
  </div>
</div>
`;

exports[`renders a select with hint 1`] = `
<div>
  <div
    class="usa-form-group"
    role="contentinfo"
  >
    <label
      class="usa-label text-bold"
      for="aws-service"
    >
      Select an AWS service
    </label>
    <div
      class="usa-hint"
      id="aws-service-description"
    >
      Think twice before selecting
    </div>
    <select
      aria-describedby="aws-service-description"
      class="usa-select"
      id="aws-service"
      name="aws-service"
    />
  </div>
</div>
`;

exports[`renders an empty dropdown 1`] = `
<div>
  <div
    class="usa-form-group"
    role="contentinfo"
  >
    <label
      class="usa-label text-bold"
      for="aws-service"
    >
      Select an AWS service
    </label>
    <div
      class="usa-hint"
      id="aws-service-description"
    />
    <select
      aria-describedby="aws-service-description"
      class="usa-select"
      id="aws-service"
      name="aws-service"
    />
  </div>
</div>
`;
